# SDK

./: .gitignore  LICENSE  README.md
code/cpp/: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json
code/cpp/cmake/: CompilerFlags.cmake  Doxygen.cmake  FindOrFetchDependencies.cmake
code/cpp/docs/: README.md  getting-started.md  message-flow.md  nmea0183-encapsulation.md  receiving-nmea2000.md  sending-nmea2000.md  wire-trace.md
code/cpp/docs/bem-commands/: README.md  device-control.md  device-information.md  nmea2000-product-info.md  pgn-enable-lists.md  port-configuration.md  unsolicited-messages.md
code/cpp/examples/: CMakeLists.txt  actisense_console.cpp  actisense_console_help.md  pgn_transmitter.cpp  pgn_transmitter_help.md  test_single_include.cpp
code/cpp/examples/nmea_reader/: nmea_reader_console.cpp  nmea_reader_console_help.md  pgn_table_model.cpp  pgn_table_model.hpp
code/cpp/scripts/: run-device-tests.ps1
code/cpp/src/: CMakeLists.txt
code/cpp/src/core/: bem_helpers.hpp  error_category.cpp  logger.cpp  metrics_collector.cpp  metrics_collector.hpp  remote_device.cpp  remote_device_impl.cpp  remote_device_impl.hpp  session.cpp  session_commands.cpp  session_impl.cpp  session_impl.hpp  session_receive.cpp  session_remote.cpp  session_wire_trace.cpp  supported_pgn_list_walk.cpp  supported_pgn_list_walk.hpp
code/cpp/src/platform/linux/: EnumerateSerialDevices_linux.cpp  EnumerateSerialDevices_linux.hpp  enumerate_serial_devices_linux.cpp  enumerate_serial_devices_linux.hpp
code/cpp/src/platform/macos/: enumerate_serial_devices_macos.cpp  enumerate_serial_devices_macos.hpp
code/cpp/src/platform/windows/: EnumerateSerialDevices_windows.cpp  EnumerateSerialDevices_windows.hpp  enumerate_serial_devices_windows.cpp  enumerate_serial_devices_windows.hpp
code/cpp/src/protocols/: protocol.hpp  protocol_error.cpp  protocol_error.hpp
code/cpp/src/protocols/bdtp/: bdtp_protocol.cpp  bdtp_protocol.hpp
code/cpp/src/protocols/bem/: bem_protocol.cpp  bem_protocol.hpp  bem_types.hpp  bem_wrap_126720.cpp  bem_wrap_126720.hpp  bem_wrap_parlb.cpp  bem_wrap_parlb.hpp
code/cpp/src/protocols/bem/bem_commands/: activate_pgn_enable_lists.hpp  bem_commands.hpp  can_config.hpp  can_info_fields.hpp  commit_to_eeprom.hpp  commit_to_flash.hpp  default_pgn_enable_list.hpp  delete_pgn_enable_lists.hpp  echo.hpp  error_report.hpp  negative_ack.hpp  operating_mode.cpp  operating_mode.hpp  params_pgn_enable_lists.hpp  port_baudrate.hpp  port_pcode.hpp  product_info.hpp  reinit_main_app.hpp  rx_pgn_enable.hpp  rx_pgn_enable_list_f1.hpp  rx_pgn_enable_list_f2.hpp  startup_status.hpp  (+6 more)
code/cpp/src/protocols/bst/: bst_decoder.cpp  bst_decoder.hpp  bst_frame.cpp  bst_frame.hpp  bst_types.hpp
code/cpp/src/public/: api.cpp  api.hpp  api_session.cpp  bem_callbacks.hpp  config.hpp  ebl_writer.cpp  ebl_writer.hpp  error.hpp  events.hpp  hardware_info.cpp  hardware_info.hpp  logging.hpp  metrics.hpp  operating_mode.hpp  pgn_encoders.cpp  pgn_encoders.hpp  received_frame.cpp  received_frame.hpp  remote_device.hpp  response_origin.hpp  sdk.hpp  serial_device_info.hpp  session.hpp  transport.hpp  version.hpp  wire_trace.cpp  wire_trace.hpp
code/cpp/src/public/actisense/: error.hpp  sdk.hpp  session.hpp
code/cpp/src/public/bem_responses/: can_config.hpp  can_info_fields.hpp  echo.hpp  error_report.hpp  negative_ack.hpp  params_pgn_enable_lists.hpp  pgn_enable_list_f2.hpp  pgn_enable_lists.hpp  port_baudrate.hpp  port_pcode.hpp  product_info.hpp  rx_pgn_enable.hpp  startup_status.hpp  supported_pgn_list.hpp  system_status.hpp  total_time.hpp  tx_pgn_enable.hpp  unsolicited.hpp
code/cpp/src/transport/: transport.hpp  transport.md  transport_error.cpp  transport_error.hpp
code/cpp/src/transport/loopback/: loopback_transport.cpp  loopback_transport.hpp
code/cpp/src/transport/serial/: posix_custom_baud.cpp  posix_custom_baud.hpp  serial_transport.cpp  serial_transport.hpp
code/cpp/src/util/: bdtp_frame_assembler.cpp  bdtp_frame_assembler.hpp  debug_log.cpp  debug_log.hpp  dynamic_ring_buffer.hpp  endian.hpp  log_macros.hpp  message_ring_buffer.hpp  n183_sentence_assembler.cpp  n183_sentence_assembler.hpp  ring_buffer.hpp  stderr_logger.cpp  stderr_logger.hpp
code/cpp/tests/: CMakeLists.txt  check_api_umbrella.cmake  check_no_internal_includes.cmake  check_public_headers_guard.cmake
code/cpp/tests/integration/: CMakeLists.txt  CMakeLists.txt.orig  test_bdtp_loopback.cpp  test_bem_device.cpp  test_bem_remote_device.cpp  test_can_packet_mode.cpp  test_can_packet_mode_emulator.cpp  test_iso_request_git106.cpp  test_negative_ack_loopback.cpp  test_parlb_device.cpp  test_parlb_loopback.cpp  test_remote_bem_loopback.cpp  test_rx_pgn_enable_device_error_loopback.cpp  test_rxall_pgn_filter_git107.cpp  test_session_pgn_enable_public_api.cpp  test_tx_pgn_blocking_fastpacket.cpp  test_tx_pgn_blocking_fastpacket_proprietary.cpp  test_tx_pgn_blocking_singleframe.cpp  test_tx_pgn_blocking_singleframe_proprietary.cpp
code/cpp/tests/unit/: CMakeLists.txt  posix_baud_readback.cpp  posix_baud_readback.hpp  test_abi_layout.cpp  test_api_open.cpp  test_api_open_with_transport.cpp  test_api_umbrella.cpp  test_bdtp_frame_assembler.cpp  test_bdtp_protocol.cpp  test_bem_callbacks_standalone.cpp  test_bem_correlation_src_addr.cpp  test_bem_device_error_mapping.cpp  test_bem_wrap_126720.cpp  test_bem_wrap_parlb.cpp  test_bst_frame.cpp  test_debug_log.cpp  test_device_control.cpp  test_ebl_writer.cpp  test_echo.cpp  test_enumerate_serial_devices_macos.cpp  test_error_category.cpp  test_logging.cpp  test_loopback_transport.cpp  test_message_ring_buffer.cpp  test_metrics.cpp  test_model_id_helpers.cpp  test_n183_sentence_assembler.cpp  test_nmea2000_product_info.cpp  test_operating_mode.cpp  test_pgn_encoders.cpp  test_pgn_list_management.cpp  test_pgn_table_model.cpp  test_port_baudrate.cpp  test_port_pcode.cpp  test_received_frame.cpp  test_ring_buffer.cpp  test_rx_pgn_enable.cpp  test_serial_transport_posix.cpp  test_session_cancel.cpp  test_session_device_control.cpp  (+10 more)
(+129 files in other folders)
