# tests/CMakeLists.txt - Unit and integration tests

include(GoogleTest)

# Store the source directories before we descend into subdirectories
set(SDK_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../src")
set(SDK_PUBLIC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../src/public")

# ============================================================================
# Test Helper Function
# ============================================================================
function(add_sdk_test test_name test_file)
    # Extra source files (e.g. an isolated helper TU) may follow test_file.
    add_executable(${test_name} ${test_file} ${ARGN})

    target_link_libraries(${test_name}
        PRIVATE
            actisense_sdk
            GTest::gtest_main
    )

    target_include_directories(${test_name}
        PRIVATE
            ${SDK_SRC_DIR}
            ${SDK_PUBLIC_DIR}
    )

    target_compile_features(${test_name} PRIVATE cxx_std_20)

    gtest_discover_tests(${test_name}
        WORKING_DIRECTORY $<TARGET_FILE_DIR:${test_name}>
        PROPERTIES
            LABELS "unit"
        DISCOVERY_TIMEOUT 30
    )
endfunction()

# ============================================================================
# Test Subdirectories
# ============================================================================
add_subdirectory(unit)
add_subdirectory(integration)

# ============================================================================
# Boundary guards (GIT-131, generalizing the GIT-112 guard).
# Pure CMake script tests — portable, need no compiler.
# ============================================================================
set(SDK_EXAMPLES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../examples")

# (a) No public header (src/public/*.hpp) may #include any internal header.
add_test(
    NAME public_headers_no_internal_include
    COMMAND ${CMAKE_COMMAND}
            -DSCAN_DIR=${SDK_PUBLIC_DIR}
            -DGUARD_LABEL=public-headers
            -P ${CMAKE_CURRENT_SOURCE_DIR}/check_no_internal_includes.cmake
)
set_tests_properties(public_headers_no_internal_include PROPERTIES LABELS "guard")

# (b) No example (examples/*.cpp,*.hpp) may #include any internal header — an
# example must model an external consumer and reach the SDK via public/ only.
add_test(
    NAME examples_no_internal_include
    COMMAND ${CMAKE_COMMAND}
            -DSCAN_DIR=${SDK_EXAMPLES_DIR}
            -DSCAN_EXTENSIONS=cpp\;hpp
            -DGUARD_LABEL=examples
            -P ${CMAKE_CURRENT_SOURCE_DIR}/check_no_internal_includes.cmake
)
set_tests_properties(examples_no_internal_include PROPERTIES LABELS "guard")

# (c) public/api.hpp must aggregate every top-level public header (umbrella).
add_test(
    NAME public_api_umbrella_complete
    COMMAND ${CMAKE_COMMAND}
            -DPUBLIC_DIR=${SDK_PUBLIC_DIR}
            -P ${CMAKE_CURRENT_SOURCE_DIR}/check_api_umbrella.cmake
)
set_tests_properties(public_api_umbrella_complete PROPERTIES LABELS "guard")

# ============================================================================
# Public-header self-containment sweep (GIT-131).
# For every public header, generate a TU that #includes it twice (the second
# include also catches missing include guards) and compile them all against the
# public-only include path (via actisense_sdk's downstream interface — internal
# dirs are unreachable). A header that is not self-contained, or that reaches an
# internal header, fails the build.
# ============================================================================
file(GLOB_RECURSE _sc_public_headers CONFIGURE_DEPENDS
     RELATIVE "${SDK_PUBLIC_DIR}" "${SDK_PUBLIC_DIR}/*.hpp")
set(_sc_generated_dir "${CMAKE_CURRENT_BINARY_DIR}/selfcontained")
set(_sc_sources "")
foreach(_rel ${_sc_public_headers})
    string(MAKE_C_IDENTIFIER "${_rel}" _stem)
    set(_gen "${_sc_generated_dir}/sc_${_stem}.cpp")
    file(WRITE "${_gen}"
         "/* Generated by tests/CMakeLists.txt — public-header self-containment check. */\n"
         "#include \"public/${_rel}\"\n"
         "#include \"public/${_rel}\"\n")
    list(APPEND _sc_sources "${_gen}")
endforeach()
set(_sc_main "${_sc_generated_dir}/selfcontained_main.cpp")
file(WRITE "${_sc_main}"
     "/* Generated by tests/CMakeLists.txt. */\nint main() { return 0; }\n")

add_executable(test_public_headers_selfcontained ${_sc_sources} ${_sc_main})
# Link the SDK ONLY for its public-only include interface; deliberately do NOT
# add src/, so an internal include in a public header fails to compile here.
target_link_libraries(test_public_headers_selfcontained PRIVATE actisense_sdk)
target_compile_features(test_public_headers_selfcontained PRIVATE cxx_std_20)
add_test(NAME public_headers_selfcontained
         COMMAND test_public_headers_selfcontained)
set_tests_properties(public_headers_selfcontained PROPERTIES LABELS "guard")

# ============================================================================
# api.hpp umbrella compile-proof (GIT-131): a TU including ONLY public/api.hpp
# that names a symbol from every public header. Built against the public-only
# include path (links actisense_sdk, not src/).
# ============================================================================
add_executable(test_api_umbrella ${CMAKE_CURRENT_SOURCE_DIR}/unit/test_api_umbrella.cpp)
target_link_libraries(test_api_umbrella PRIVATE actisense_sdk GTest::gtest_main)
target_compile_features(test_api_umbrella PRIVATE cxx_std_20)
gtest_discover_tests(test_api_umbrella
    WORKING_DIRECTORY $<TARGET_FILE_DIR:test_api_umbrella>
    PROPERTIES LABELS "unit"
    DISCOVERY_TIMEOUT 30
)

message(STATUS "Tests configured (add test files in tests/unit/ and tests/integration/)")
